[package]
name = "cfdkim"
version = "0.2.4"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
edition = "2021"
description = "DKIM (RFC6376) implementation"
repository = "https://github.com/cloudflare/dkim"
documentation = "https://docs.rs/cfdkim"
categories = ["email"]
keywords = ["email", "dkim", "authentification"]
readme = "README.md"
license = "MIT"

[dependencies]
ed25519-dalek = "1.0.1"
mailparse = "0.13.7"
quick-error = "2.0.1"
nom = "7.1.0"
time = { version = "0.3.13", features = ["parsing"] }
trust-dns-resolver = "0.22"
futures = "0.3.18"
sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
base64 = "0.13.0"
rsa = "0.7"
tracing = "0.1.36"
indexmap = "1.8.0"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["macros"] }
regex = "1"
